# weld-signal-classifier

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
notebooks/: 01_weld_signal_analysis.ipynb
src/: app.py  classifier.py  signal_generator.py
