[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "weld-signal-classifier"
version = "0.2.0"
description = "Real-time laser weld defect classification from 10 kHz photodiode and acoustic emission signals"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Dmitri Shurkhai", email = "etozhejimmy@gmail.com" }]
keywords = ["laser-welding", "signal-processing", "xgboost", "ndt", "manufacturing"]
dependencies = [
    "streamlit>=1.32.0", "pandas>=2.0.0", "numpy>=1.24.0",
    "scikit-learn>=1.3.0", "xgboost>=2.0.0",
    "plotly>=5.18.0", "pyyaml>=6.0", "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
